fixed spacing

--- a/style.css
+++ b/style.css
@@ -590,6 +590,16 @@ button
             '. . . button  . .';
     }
 
+    .rhome {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+            'logo'
+            'main'
+            'button';
+    }
+
+
     #tree1{
         max-width: 30vw;
         max-height: 30vh;    
@@ -637,11 +647,12 @@ button
       
       .awarenessPage
     {
+    
     display: grid;
     min-height: 100vh;
     width: 100vw; 
     grid-template-columns: repeat(7,1fr);
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 0.1fr 0.3fr 0.5fr;
     grid-template-areas:
     'logo header . . .'
     '. textA textA textA .'
